Styled zoom and pan buttons

--- a/code/api/static/style.css
+++ b/code/api/static/style.css
@@ -16,7 +16,8 @@
 }
 
 .topbarcont {
-	position: inline-table;
+	z-index: 1000;
+	position: fixed;
 	width: 100%;
 	background-color: #2288EE;
 }
@@ -28,12 +29,31 @@
 .panel-element {
 	margin-top: 10px;
 	padding: 15px;
+	z-index: 1001;
+	background-color: #E5E4E2;
+	-webkit-transition-property:#E5E4E2;
+	-webkit-transition-duration: 0.2s, 0.2s;
+	-webkit-transition-timing-function: linear, ease-in;
+	-moz-transition-property:#E5E4E2;
+	-moz-transition-duration:1s;
+	-moz-transition-timing-function: linear, ease-in;
+	-o-transition-property:#E5E4E2;
+	-o-transition-duration:0.2s;
+	-o-transition-timing-function: linear, ease-in;
+}
+
+.panel-element:hover {
+	background-color: #D1D0CE;
 }
 
 .row {
 	padding: 0px;
 	margin-top: 10px;
 	margin-bottom: 10px;
+}
+
+.number1 {
+	margin-top: 20%;
 }
 
 .collapsible-header {
@@ -68,4 +88,226 @@
 
 .mdi-action-autorenew {
 	color: white;
+}
+
+#container {
+	width: 100%;
+	height: 165%;
+}
+
+.snapshotDropdown {
+	width: 70%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.nav-container {
+	width: 8%;
+	height: 20%;
+	position: fixed;
+	bottom: 10px;
+	right: 30px;
+}
+
+.row1 {
+	height: 33%;
+	text-align: center;
+}
+
+.r1c1 {
+	display: inline-block;
+	width: 34%;
+	float: left;
+	height: 100%;
+	position: relative;
+}
+
+.ATL {
+	height: 90%;
+	width: 100%;
+	position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.r1c2 {
+	position: relative;
+	display: inline-block;
+	width: 28%;
+	float: center;
+	height: 100%;
+}
+
+.PU {
+	height: 45%;
+	position: absolute;
+	margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+	cursor: pointer;
+}
+
+.r1c3 {
+	display: inline-block;
+	width: 34%;
+	float: right;
+	height: 100%;
+	position: relative;
+}
+
+.ATR {
+	height: 90%;
+	width: 100%;
+	position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.row2 {
+	height: 25%;
+}
+
+.r2c1 {
+	display: inline-block;
+	width: 34%;
+	float: left;
+	height: 100%;
+	position: relative;
+}
+
+.PL {
+	height: 59%;
+	position: absolute;
+	margin: auto;
+    top: 0;
+    left: 0;
+	bottom: 0;
+	cursor: pointer;
+}
+
+.r2c2 {
+	position: relative;
+	display: inline-block;
+	width: 28%;
+	float: center;
+	height: 100%;
+}
+
+.r2c2UPPER {
+	text-align: center;
+	width: 100%;
+	height: 50%;
+}
+
+.ZI {
+	position: absolute;
+	margin: auto;
+    top: 0;
+	right: 0;
+	cursor: pointer;
+	height: 45%;
+	width: 85%;
+}
+
+.r2c2LOWER {
+	text-align: center;
+	width: 100%;
+	height: 50%;
+}
+
+.ZO {
+	position: absolute;
+	margin: auto;
+	right: 0;
+	bottom: 0;
+	cursor: pointer;
+	height: 45%;
+	width: 85%;
+}
+
+.r2c3 {
+	display: inline-block;
+	width: 34%;
+	float: right;
+	height: 100%;
+	position: relative;
+}
+
+.PR {
+	height: 59%;
+	position: absolute;
+	margin: auto;
+    top: 0;
+    right: 0;
+	bottom: 0;
+	cursor: pointer;
+}
+
+.row3 {
+	height: 33%;
+	text-align: center;
+}
+
+
+.r3c1 {
+	position: relative;
+	display: inline-block;
+	width: 35%;
+	float: left;
+	height: 100%;
+}
+
+.ABL {
+	height: 90%;
+	width: 100%;
+	position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.r3c2 {
+	position: relative;
+	display: inline-block;
+	width: 28%;
+	float: center;
+	height: 100%;
+}
+
+.PD {
+	height: 45%;
+	position: absolute;
+	margin: auto;
+    left: 0;
+    right: 0;
+	bottom: 0;
+	cursor: pointer;
+}
+
+.r3c3 {
+	position: relative;
+	display: inline-block;
+	width: 35%;
+	float: right;
+	height: 100%;
+}
+
+.ABR {
+	height: 90%;
+	width: 100%;
+	position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
