Zoom-pan controls integrated with the web server

--- a/code/api/templates/index.html
+++ b/code/api/templates/index.html
@@ -17,8 +17,8 @@
   <script type="text/javascript" src="../static/js/jquery-2.1.1.min.js"></script>
   <script type="text/javascript" src="../static/js/materialize.min.js"></script>
   <script type="text/javascript" src="../static/code.js"></script>
-  <script type="text/javascript" src="../static/nodes.json"></script>
-  <script type="text/javascript" src="../static/edges.json"></script>
+  <!-- <script type="text/javascript" src="../static/nodes.json"></script>
+  <script type="text/javascript" src="../static/edges.json"></script> -->
   <script src="../static/js/raphael-min.js"></script>
   <script src="../static/src/raphael.pan-zoom.js"></script>
 
@@ -75,9 +75,9 @@
 						<div class="row col s12">
 							<select id="edgetype">
 								<option value="" disabled selected>Edge Type</option>
-								<option value="1">Option 1</option>
-								<option value="2">Option 2</option>
-								<option value="3">Option 3</option>
+								<option value="all">All</option>
+								<option value="p2p">P2P</option>
+								<option value="p2c">P2C</option>
 							</select>
 						</div>
 						<div class="row">
